# openweb-proxy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: index.md  modules.md
openweb_proxy/: __about__.py  __init__.py  __main__.py  cli.py  config.py  proxy_miner.py  random_ua_headers.py
tests/: test_foo.py
the_web_open_again/: cli.py
