[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name =  "openweb_proxy"
description = "Make the Web Open Again"
authors = [{name = "Ankaboot", email = "contact@ankaboot.io"}]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/ankaboot-source/openweb_proxy"
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.2",
    "fake-useragent>=1.1.3",
    "requests[socks]>=2.31.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ankaboot-source/openweb_proxy"

[tool.hatch.version]
path = "openweb_proxy/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "./gitignore",
    "/.pre-commit-config.yaml"
]

[tool.hatch.envs.test]
dependencies = [
    "pylint>=2.15.10",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0"
]


[tool.hatch.envs.test.scripts]
lint = 'pylint openweb_proxy'
test = 'pytest -v --doctest-modules --cov=./openweb_proxy --cov-report=xml openweb_proxy '

[tool.black]
line-length = 80
extend-ignore = "E203"
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    '__init__.py:F401',
]

[tool.pylint.messages_control]
disable = """
invalid-name,missing-module-docstring,R0801
"""

[tool.bandit]
skips = ["B101"]
